fix rotating TD logo, add overflow:hidden to body`

--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -401,13 +401,14 @@ body {
   }
   img {
     cursor: pointer;
-    transition: transform 800ms;
+    transition: transform 800ms, -webkit-filter 800ms;
     position: absolute;
     height: 6vh;
     width: auto;
     margin: 2vh;
     &:first-child:hover {
       transform: rotate(360deg);
+      -webkit-filter: drop-shadow(0px 0px 5px #FAFAFA);
     }
     &.settings_button {
       right: 0;
